<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <!-- optional-->
        <item
            android:id="@+id/nav_subject_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/subject_list"
            android:visible="false"/>
        <!-- optional-->
        <item
            android:id="@+id/nav_course_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/course_list"
            />

        <item
            android:id="@+id/nav_time_table"
            android:icon="@drawable/ic_calender_black_24dp"
            android:title="@string/timetable" />

        <item
            android:id="@+id/nav_forms"
            android:icon="@drawable/icons_news_24"
            android:title="@string/forms" />
        <item
            android:id="@+id/nav_gallary"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallary" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/events" />

        <!--not in scope-->
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notifications"
            android:visible="false" />

        <!-- optional-->
        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/ic_grade_black_24dp"
            android:title="@string/grades"
            android:visible="false"/>
    </group>

</menu>
