<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/background_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/background" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/background_white"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556">

        <android.support.design.widget.TextInputLayout style="@style/inputTextLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/form_name_text_input_edittext"
                style="@style/inputTextStyle"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/inputTextLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/form_studentid_text_input_edittext"
                style="@style/inputTextStyle"
                android:hint="@string/student_id" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/inputTextLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/form_emailid_text_input_edittext"
                style="@style/inputTextStyle"
                android:inputType="textEmailAddress"
                android:hint="@string/email_id" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/inputTextLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/form_course_text_input_edittext"
                style="@style/inputTextStyle"
                android:hint="@string/course" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            style="@style/inputTextLayoutStyle"
            app:counterMaxLength="4">

            <android.support.design.widget.TextInputEditText
                style="@style/inputTextStyle"
                android:hint="@string/year"
                android:inputType="date"
                android:maxLength="4"
                android:id="@+id/form_year_text_input_edittext"/>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            style="@style/inputTextLayoutStyle"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:paddingLeft="6dp"
                android:text="@string/request"
                android:textSize="16dp" />

            <Spinner
                android:layout_gravity="end"
                android:layout_weight="1"
                android:id="@+id/spinner_request"
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

        </LinearLayout>


        <Button
            android:id="@+id/submit_form_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rec_gradient"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#FFF" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>