<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/background_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/background" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/background_white"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556">

        <android.support.design.widget.TextInputLayout style="@style/inputTextLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_text_input_edittext"
                style="@style/inputTextStyle"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/inputTextLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/studentid_text_input_edittext"
                style="@style/inputTextStyle"
                android:hint="@string/student_id" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/inputTextLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/student_email_id_text_input_edittext"
                style="@style/inputTextStyle"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_courseList"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_gravity="center" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <android.support.design.widget.TextInputLayout
            style="@style/inputTextLayoutStyle"
            app:counterMaxLength="4">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/year_text_input_edittext"
                style="@style/inputTextStyle"
                android:hint="@string/year"
                android:inputType="date"
                android:maxLength="4" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/inputTextLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_text_input_edittext"
                style="@style/inputTextStyle"
                android:hint="@string/password"
                android:inputType="textVisiblePassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/inputTextLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirm_password_text_input_edittext"
                style="@style/inputTextStyle"
                android:hint="@string/confirm_password"
                android:inputType="textVisiblePassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rec_gradient"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#FFF" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>